changed images to anchors

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 	<h2>Hello Space</h2>
 		<p>These are some images I have collected from various sites.</p>
 
-	<img src="images/messier.jpg" width="570" height="380">
-	<img src="images/doradus.jpg" width="570" height="380">
-	<img src="images/abell.jpg" width="570" height="380">
-	<img src="images/seagull-nebula.jpg" width="570" height="380">
-	
+	<ul>
+		<li><a href="images/messier.jpg">Messier</a></li>
+		<li><a href="images/doradus.jpg">Doradus</a></li>
+		<li><a href="images/abell.jpg">Abell</a></li>
+		<li><a href="images/seagull-nebula.jpg">Seagull</a></li>
+	</ul>	
+
 </body>
 	
 		
