relocated site nav

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 	
 	<div>
 	<h1>How Do I Reach Space?</h1>
-		<p>I have always found intrest in the sky. Even as a child I would look up 
-	and wonder what was out there? How can I get there? Well space is not easily reached
-	so I found pictures and words to help me achieve space travel. I don't think it's 
-	going to be achievable to save up for a <a href="http://
-	www.virgingalactic.com/booking/">Trip To Space.</a></p>
-	</div>
-	
 	<nav>
 		<ul>
 			<li><a href="text.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
-	</nav>
+	</nav>	
+		
+		<p>I have always found intrest in the sky. Even as a child I would look up 
+	and wonder what was out there? How can I get there? Well, space is not easily 
+	reached so I found pictures and words to help me achieve space travel. 
+	I don't think it's going to be achievable to save up for a <a href="http://
+	www.virgingalactic.com/booking/">Trip To Space.</a></p>
+	</div>
 	
 	<h2>Hello Space</h2>
 		<p>These are some images I have collected from various sites.</p>
