add parigraph content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	
 	<div>
 	<h1>How Do I Reach Space?</h1>
+	
 	<nav>
 		<ul>
 			<li><a href="text.html">Home</a></li>
@@ -20,7 +21,7 @@
 	and wonder what was out there? How can I get there? Well, space is not easily 
 	reached so I found pictures and words to help me achieve space travel. 
 	I don't think it's going to be achievable to save up for a <a href="http://
-	www.virgingalactic.com/booking/">Trip To Space.</a></p>
+	www.virgingalactic.com/booking/">Trip To Space</a>...or is it?</p>
 	</div>
 	
 	<h2>Hello Space</h2>
