--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 		</ul>
 	</nav>	
 		
-		<p>I have always found intrest in the sky. Even as a child I would look up 
+	<p>I have always found intrest in the sky. Even as a child I would look up 
 	and wonder what was out there? How can I get there? Well, space is not easily 
 	reached so I found pictures and words to help me achieve space travel. 
 	I don't think it's going to be achievable to save up for a <a href="http://
 	www.virgingalactic.com/booking/">Trip To Space</a>...or is it?</p>
+	<p>This site is dedicated to helping me rase the funds to achieve my lifelong dream 
+	of checking out what space is like.</p>
 	</div>
 	
 	<h2>Hello Space</h2>
