--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	
 	<nav>
 		<ul>
-			<li><a href="text.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="contact.html">Contact</a></li>
+			<li><a href="helpout.html">Help Out</a></li>
 		</ul>
 	</nav>
 	
