--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Space The Final Frontier</title>	
-
-<body>
 	
+<body>
+
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -19,7 +19,7 @@
 	<h1>How Do I Reach Space?</h1>	
 	<p>I have always found intrest in the sky. Even as a child I would look up 
 	and wonder what was out there? How can I get there? Well, space is not easily 
-	reached so I found pictures and words to help me achieve space travel. 
+	reached so I found <em>pictures</em> and words to help me achieve space travel. 
 	I don't think it's going to be achievable to save up for a <a href="http://
 	www.virgingalactic.com/booking/">Trip To Space</a>...or is it?</p>
 	<p>This site is dedicated to helping me rase the funds to achieve my lifelong dream 
