--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>Space The Final Frontier</title>	
-	
+<header>
+	<h1>Space My Final Frontier</h1>
+		<p>Space my final frontier. These are the voyages that I want to have someday.
+		To boldly go where I haven't gone before</p>	
 <body>
 
 	<nav>
@@ -16,15 +19,16 @@
 	</nav>
 	
 	<div>	
-	<h1>How Do I Reach Space?</h1>	
-	<p>I have always found intrest in the sky. Even as a child I would look up 
-	and wonder what was out there? How can I get there? Well, space is not easily 
-	reached so I found <strong>pictures</strong> and words to help me achieve
-	space travel. I didn't think it was going to be achievable to save up for a 
-	<a href="http://www.virgingalactic.com/booking/">Trip To Space</a>...or is it?</p>
-	<p>This site is dedicated to helping me raise the funds to achieve my lifelong dream 
-	of checking out what space is like. It has become a social experiment to see if 
-	people I dont even know will <em>help out</em> and get me to outer space.</p>
+	<h2>How Do I Reach Space?</h2>	
+		<p>I have always found intrest in the sky. Even as a child I would look up 
+		and wonder what was out there? How can I get there? Well, space is not easily 
+		reached so I found <strong>pictures</strong> and words to help me achieve
+		space travel. I didn't think it was going to be achievable to save up for a 
+		<a href="http://www.virgingalactic.com/booking/">Trip To Space</a>...or is it?</p>
+		<p>This site is dedicated to helping me raise the funds to achieve my lifelong 
+		dream of checking out what space is like. It has become a social experiment to 
+		see if people I dont even know will <em>help out</em> and get me to outer space.
+		</p>
 	</div>
 	
 	<h2>Hello Space</h2>
