added close tag to header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>Space The Final Frontier</title>	
+
 <header>
 	<h1>Space My Final Frontier</h1>
 		<p>Space my final frontier. These are the voyages that I want to have someday.
-		To boldly go where I haven't gone before</p>	
+		To boldly go where I haven't gone before</p>
+</header>
+	
 <body>
 
 	<nav>
