--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>Space The Final Frontier</title>	
-
-<header>
+	
+<body>
+	
+	<header>
+	
 	<h1>Space My Final Frontier</h1>
 		<p>Space my final frontier. These are the voyages that I want to have someday.
 		To boldly go where I haven't gone before</p>
-</header>
 	
-<body>
-
+	</header>
+	
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -45,6 +47,8 @@
 	</ol>	
 
 </body>
+
+<footer>
 	
 		
 </html>
