--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Space The Final Frontier</title>	
-	
-<body>
-	
-	<header>
-	
-	<h1>Space My Final Frontier</h1>
-		<p>Space my final frontier. These are the voyages that I want to have someday.
-		To boldly go where I haven't gone before</p>
-	
-	</header>
-	
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="contact.html">Contact</a></li>
-			<li><a href="helpout.html">Help Out</a></li>
-		</ul>
-	</nav>
-	
-	<div>	
-	<h2>How Do I Reach Space?</h2>	
-		<p>I have always found intrest in the sky. Even as a child I would look up 
-		and wonder what was out there? How can I get there? Well, space is not easily 
-		reached so I found <strong>pictures</strong> and words to help me achieve
-		space travel. I didn't think it was going to be achievable to save up for a 
-		<a href="http://www.virgingalactic.com/booking/">Trip To Space</a>...or is it?</p>
-		<p>This site is dedicated to helping me raise the funds to achieve my lifelong 
-		dream of checking out what space is like. It has become a social experiment to 
-		see if people I dont even know will <em>help out</em> and get me to outer space.
-		</p>
-	</div>
-	
-	<h2>Hello Space</h2>
-		<p>These are some images I have collected from various sites.</p>
-
-	<ol>
-		<li><a href="images/messier.jpg">Messier</a></li>
-		<li><a href="images/doradus.jpg">Doradus</a></li>
-		<li><a href="images/abell.jpg">Abell</a></li>
-		<li><a href="images/seagull-nebula.jpg">Seagull</a></li>
-	</ol>	
-
-</body>
-
-<footer>
-	
+	<head>
+		<meta charset="utf-8">
+		<title>Space The Final Frontier</title>	
+	<body>
+		<header>
+			<h1>Space My Final Frontier</h1>
 		
+			<p>Space my final frontier. These are the voyages that I want to have someday.
+			To boldly go where I haven't gone before</p>
+	
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="helpout.html">Help Out</a></li>
+				</ul>
+			</nav>
+		</header>	
+			<h2>How Do I Reach Space?</h2>	
+			
+			<div>
+			
+			<p>I have always found intrest in the sky. Even as a child I would look up 
+			and wonder what was out there? How can I get there? Well, space is not easily 
+			reached so I found <strong>pictures</strong> and words to help me achieve
+			space travel. I didn't think it was going to be achievable to save up for a 
+			<a href="http://www.virgingalactic.com/booking/">Trip To Space</a>...or is
+			it?</p>
+		
+			<p>This site is dedicated to helping me raise the funds to achieve my lifelong 
+			dream of checking out what space is like. It has become a social experiment to 
+			see if people I dont even know will <em>help out</em> and get me to outer
+			space.</p>
+			
+			</div>
+	
+			<h2>Hello Space</h2>
+			
+			<p>These are some images I have collected from various sites.</p>
+
+			<ol>
+				<li><a href="images/messier.jpg">Messier</a></li>
+				<li><a href="images/doradus.jpg">Doradus</a></li>
+				<li><a href="images/abell.jpg">Abell</a></li>
+				<li><a href="images/seagull-nebula.jpg">Seagull</a></li>
+			</ol>	
+		<footer>
+			<p>ITM Enterprise All Rights Reserved. &copy; 2012</p>
+		</footer>
+	</body>
 </html>
