replaced div tag with section

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 				</ul>
 			</nav>
 		</header>	
-			<h2>How Do I Reach Space?</h2>	
+			<section>
 			
-			<div>
+			<h2>How Do I Reach Space?</h2>	
 			
 			<p>I have always found intrest in the sky. Even as a child I would look up 
 			and wonder what was out there? How can I get there? Well, space is not easily 
@@ -35,7 +35,7 @@
 			see if people I dont even know will <em>help out</em> and get me to outer
 			space.</p>
 			
-			</div>
+			</section>
 	
 			<h2>Hello Space</h2>
 			
