--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<h1>Space My Final Frontier</h1>
 		
 			<p>Space my final frontier. These are the voyages that I want to have someday.
-			To boldly go where I haven't gone before</p>
+			To boldly go where I haven't gone before.</p>
 	
 			<nav>
 				<ul>
