--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				</ul>
 			</nav>
 		</header>	
-			<section>
-			
+		
+		<section>
 			<h2>How Do I Reach Space?</h2>	
 			
 			<p>I have always found intrest in the sky. Even as a child I would look up 
@@ -35,18 +35,33 @@
 			see if people I dont even know will <em>help out</em> and get me to outer
 			space.</p>
 			
-			</section>
-	
+		</section>
+		
+		<section>
 			<h2>Hello Space</h2>
 			
 			<p>These are some images I have collected from various sites.</p>
-
+		
+		<aside>
 			<ol>
 				<li><a href="images/messier.jpg">Messier</a></li>
 				<li><a href="images/doradus.jpg">Doradus</a></li>
 				<li><a href="images/abell.jpg">Abell</a></li>
 				<li><a href="images/seagull-nebula.jpg">Seagull</a></li>
-			</ol>	
+			</ol>
+		</aside>
+			
+			<p>These are some articles on the web I found interesting</p>
+		
+		<artical> 
+			<ol>
+				<li><a href="http://www.space.com/18202-earth-magnetic-field-
+				reversal.html">Earth's Magnetic Field</a></li>
+			</ol>
+		</artical>		 	
+		
+		</section>
+		
 		<footer>
 			<p>ITM Enterprise All Rights Reserved. &copy; 2012</p>
 		</footer>
