--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 				<li><a href="images/seagull-nebula.jpg">Seagull</a></li>
 			</ol>
 		</aside>
+		
 		<artical>	
-			<p>These are some articles on the web I found interesting</p>
+			<p>This is a article on the web I found interesting</p>
 		 
 			<ol>
 				<li><a href="http://www.space.com/18202-earth-magnetic-field-
