fixed validation issues

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 			
 		</section>
 		
-		<section>
 			<h2>Hello Space</h2>
 		<aside>	
 			<p>These are some images I have collected from various sites.</p>
@@ -50,16 +49,13 @@
 			</ol>
 		</aside>
 		
-		<artical>	
+			
 			<p>This is a article on the web I found interesting</p>
 		 
 			<ol>
-				<li><a href="http://www.space.com/18202-earth-magnetic-field-
-				reversal.html">Earth's Magnetic Field</a></li>
+				<li><a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a></li>
 			</ol>
-		</artical>		 	
-		
-		</section>
+				 	
 		
 		<footer>
 			<p>ITM Enterprise All Rights Reserved. &copy; 2012</p>
