--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Space The Final Frontier</title>	
+		<title>Space My Final Frontier</title>	
 	<body>
 		<header>
 			<h1>Space My Final Frontier</h1>
