closed head tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Space My Final Frontier</title>	
+	</head>
+	
 	<body>
 		<header>
 			<h1>Space My Final Frontier</h1>
