css first commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			
 		</section>
 		
-			<h2>Hello Space</h2>
+			<h2>Hello Space!</h2>
 		<aside>	
 			<p>These are some images I have collected from various sites.</p>
 		
@@ -51,14 +51,14 @@
 				<li><a href="images/seagull-nebula.jpg">Seagull</a></li>
 			</ol>
 		</aside>
-		
-			
-			<p>This is a article on the web I found interesting</p>
+			<h2>What's that you say?</h2>
+		<article>	
+			<p>This is a article on the web I found interesting.</p>
 		 
 			<ol>
 				<li><a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a></li>
 			</ol>
-				 	
+		</article>	
 		
 		<footer>
 			<p>ITM Enterprise All Rights Reserved. &copy; 2012</p>
