added font familys

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Space My Final Frontier</title>	
-		<link rel="stylesheet" href="css/main.css"> 
+		<link rel="stylesheet" href="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Underdog' rel='stylesheet' type='text/css'> 
 	</head>
 	
 	<body>
@@ -35,8 +36,8 @@
 		
 			<p>This site is dedicated to helping me raise the funds to achieve my lifelong 
 			dream of checking out what space is like. It has become a social experiment to 
-			see if people I dont even know will <em>help out</em> and get me to outer
-			space.</p>
+			see if people I dont even know will <em>help out</em> and get me a ride to 
+			outer space.</p>
 			
 		</section>
 		
