--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 			<p>I have always found intrest in the sky. Even as a child I would look up 
 			and wonder what was out there? How can I get there? Well, space is not easily 
 			reached so I found <strong>pictures</strong> and <strong>words</strong> to
-			help me achieve space travel. I didn't think it was going to be achievable to
-			save up for a <a href="http://www.virgingalactic.com/booking/">Trip To 
-			Space</a>...or is it?</p>
+			help me achieve space travel. I didn't ever think it was going to be 
+			achievable to get to outer space, but now I just need to save up for a
+			<a href="http://www.virgingalactic.com/booking/">trip to space.</a> Thanks to
+			Virgin Galactics ambition I am one step closer, but that comes with a price.
+			A very hefty one.</p>
 		
 			<p>This site is dedicated to helping me raise the funds to achieve my lifelong 
 			dream of checking out what space is like. It has become a social experiment to 
