added more text content to html

--- a/index.html
+++ b/index.html
@@ -34,12 +34,22 @@
 			achievable to get to outer space, but now I just need to save up for a
 			<a href="http://www.virgingalactic.com/booking/">trip to space.</a> Thanks to
 			Virgin Galactics ambition I am one step closer, but that comes with a price.
-			A very hefty one.</p>
+			A very hefty one. I didn't let that get me down though! I just thought if I 
+			could get 200k people to donate a dollar to help out I could float that kind 
+			of bill.</p>
 		
-			<p>This site is dedicated to helping me raise the funds to achieve my lifelong 
-			dream of checking out what space is like. It has become a social experiment to 
-			see if people I dont even know will <em>help out</em> and get me a ride to 
-			outer space.</p>
+			<p>This site I created is dedicated to helping me raise the funds to achieve 
+			my lifelong dream of checking out what space is like. It has become a social
+			experiment to see if people I dont even know will <em>help out</em> and get 
+			me a ride to outer space. I came up with the idea from living in Minneapolis
+			and watching video's on Youtube. When I lived in the Twin Citys area people 
+			would ask for spare change to ride the bus or whatever. It usually was outside
+			Chicago Lake Liquor so it wasn't very hard to figure out what your spare 
+			change was going towards. I figured I would take an honest approach if I'm 
+			going to pan-handle my way to space. Also watching viral video's on Youtube
+			that have had millions of viewers/hits gave me the idea to expand this idea
+			to the web. Because I don't really have time to stand on the corner somewhere
+			and ask people for spare change.</p>
 			
 		</section>
 		
