--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a href="helpout.html">Help Out</a></li>
+					<li><a href="helpout.html">Help Me Out</a></li>
 				</ul>
 			</nav>
 		</header>	
@@ -32,7 +32,7 @@
 			reached so I found <strong>pictures</strong> and <strong>words</strong> to
 			help me achieve space travel. I didn't ever think it was going to be 
 			achievable to get to outer space, but now I just need to save up for a
-			<a href="http://www.virgingalactic.com/booking/">trip to space.</a> Thanks to
+			<a href="http://www.virgingalactic.com/booking/">trip to space</a>. Thanks to
 			Virgin Galactics ambition I am one step closer, but that comes with a price.
 			A very hefty one. I didn't let that get me down though! I just thought if I 
 			could get 200k people to donate a dollar to help out I could float that kind 
@@ -46,11 +46,11 @@
 			would ask for spare change to ride the bus or whatever. It usually was outside
 			Chicago Lake Liquor so it wasn't very hard to figure out what your spare 
 			change was going towards. I figured I would take an honest approach if I'm 
-			going to pan-handle my way to space. Also watching viral video's on Youtube
-			that have had millions of viewers/hits gave me the idea to expand this idea
-			to the web. Because I don't really have time to stand on the corner somewhere
-			and ask people for spare change.</p>
-			
+			going to pan-handle my way to space. Also when I was watching viral video's 
+			on Youtube that have had millions of viewers/hits that gave me the idea to 
+			expand this idea to the web. Because I don't really have time to stand on the 
+			corner somewhere and ask people for spare change working fulltime and going
+			to school at <a href="http://www.fullsail.edu">Full Sail</a>.</p>
 		</section>
 		
 			<h2>Hello Space!</h2>
