--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
 	</head>
 	
 	<body>
+			<nav>
+				<ul>
+					<li class="navlist"><a class="navanchors" href="index.html">Home</a></li>
+					<li class="navlist"><a class="navanchors" href="about.html">About</a></li>
+					<li class="navlist"><a class="navanchors" href="contact.html">Contact</a></li>
+					<li class="navlist"><a class="navanchors" href="helpout.html">Help Me Out</a></li>
+				</ul>
+			</nav>
 		<header>
 			<h1>Space My Final Frontier</h1>
 		
-			<p>Space my final frontier. These are the voyages that I want to have someday.
+			<p id="titlestatement">Space my final frontier. These are the voyages that I want to have someday.
 			To boldly go where I haven't gone before.</p>
-	
-			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="helpout.html">Help Me Out</a></li>
-				</ul>
-			</nav>
+		<div>
+		</div>
 		</header>	
 		
 		<section>
 			<h2>How Do I Reach Space?</h2>	
 			
-			<p>I have always found intrest in the sky. Even as a child I would look up 
+			<p> "I have always found intrest in the sky. Even as a child I would look up 
 			and wonder what was out there? How can I get there? Well, space is not easily 
 			reached so I found <strong>pictures</strong> and <strong>words</strong> to
 			help me achieve space travel. I didn't ever think it was going to be 
@@ -66,11 +67,11 @@
 		</aside>
 			<h2>What's that you say?</h2>
 		<article>	
-			<p>This is a article on the web I found interesting.</p>
+			<p>This is an article on the web I found interesting.</p>
 		 
-			<ol>
+			<ul>
 				<li><a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a></li>
-			</ol>
+			</ul>
 		</article>	
 		
 		<footer>
