fixed some sizes in html and css

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 				</ul>
 			</nav>
 		<header>
+			
 			<h1>Space My Final Frontier</h1>
 		
 			<p id="titlestatement">Space my final frontier. These are the voyages that I want to have someday.
 			To boldly go where I haven't gone before.</p>
 		<div>
+		<img src="images/EarthFromSpace.jpg" alt="" width="900" height="300">
 		</div>
 		</header>	
 		
