fixed some html issues

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<p id="titlestatement">Space my final frontier. These are the voyages that I want to have someday.
 			To boldly go where I haven't gone before.</p>
 		<div>
-		<img src="images/EarthFromSpace.jpg" alt="" width="900" height="300">
+			<img src="images/EarthFromSpace.jpg" alt="" width="900" height="300">
 		</div>
 		</header>	
 		
@@ -38,8 +38,8 @@
 			<a href="http://www.virgingalactic.com/booking/">trip to space</a>. Thanks to
 			Virgin Galactics ambition I am one step closer, but that comes with a price.
 			A very hefty one. I didn't let that get me down though! I just thought if I 
-			could get 200k people to donate a dollar to help out I could float that kind 
-			of bill.</p>
+			could get 200k people to donate a dollar to <em>help out</em> I could float 
+			that kind of bill.</p>
 		
 			<p>This site I created is dedicated to helping me raise the funds to achieve 
 			my lifelong dream of checking out what space is like. It has become a social
