--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<p id="titlestatement">Space my final frontier. These are the voyages that I want to have someday.
 			To boldly go where I haven't gone before.</p>
 		<div>
-			<img src="images/EarthFromSpace.jpg" alt="" width="900" height="300">
+			<img src="images/earth-from-space.jpg" alt="" width="900" height="300">
 		</div>
 		</header>	
 		
