html issues fixed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			
 			<h1>Space My Final Frontier</h1>
 		
-			<p id="titlestatement">Space my final frontier. These are the voyages that I want to have someday.
+			<p id="titlestatement">Space, my final frontier. These are the voyages that I want to have someday.
 			To boldly go where I haven't gone before.</p>
 		<div>
 			<img src="images/earth-from-space.jpg" alt="" width="900" height="300">
@@ -56,24 +56,26 @@
 			to school at <a href="http://www.fullsail.edu">Full Sail</a>.</p>
 		</section>
 		
+		<aside>
 			<h2>Hello Space!</h2>
-		<aside>	
+			
 			<p>These are some images I have collected from various sites.</p>
 		
 			<ul>
-				<li><a href="images/messier.jpg">Messier</a></li>
-				<li><a href="images/doradus.jpg">Doradus</a></li>
-				<li><a href="images/abell.jpg">Abell</a></li>
-				<li><a href="images/seagull-nebula.jpg">Seagull</a></li>
+				<li><a class="imageanchors" href="images/messier.jpg">Messier</a></li>
+				<li><a class="imageanchors" href="images/doradus.jpg">Doradus</a></li>
+				<li><a class="imageanchors" href="images/abell.jpg">Abell</a></li>
+				<li><a class="imageanchors" href="images/seagull-nebula.jpg">Seagull</a></li>
 			</ul>
 		</aside>
-			<h2>What's that you say?</h2>
+		
 		<article>	
+			<h2>What's that you say?</h2>
+				
 			<p>This is an article on the web I found interesting.</p>
 		 
-			<ul>
-				<li><a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a></li>
-			</ul>
+			<a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a></li>
+			
 		</article>	
 		
 		<footer>
