fixed validation issue

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<p id="titlestatement">Space, my final frontier. These are the voyages that I want to have someday.
 			To boldly go where I haven't gone before.</p>
 		<div>
-			<img src="images/earth-from-space.jpg" alt="" width="900" height="300">
+			<img src="images/earth-from-space.jpg" alt="" width="900" height="310">
 		</div>
 		</header>	
 		
@@ -74,7 +74,7 @@
 				
 			<p>This is an article on the web I found interesting.</p>
 		 
-			<a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a></li>
+			<a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a>
 			
 		</article>	
 		
