--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			my lifelong dream of checking out what space is like. It has become a social
 			experiment to see if people I dont even know will <em>help out</em> and get 
 			me a ride to outer space. I came up with the idea from living in Minneapolis
-			and watching video's on Youtube. When I lived in the Twin Citys area people 
+			and watching video's on Youtube. When I lived in Minneapolis people 
 			would ask for spare change to ride the bus or whatever. It usually was outside
 			Chicago Lake Liquor so it wasn't very hard to figure out what your spare 
 			change was going towards. I figured I would take an honest approach if I'm 
