added id wrapper and meta for media querys

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum scale=1">
 		<title>Space My Final Frontier</title>	
 		<link rel="stylesheet" href="css/main.css">
 		<link href='http://fonts.googleapis.com/css?family=Underdog' rel='stylesheet' type='text/css'> 
 	</head>
 	
 	<body>
+		<div id="wrapper">	
 			<nav>
 				<ul>
 					<li class="navlist"><a class="navanchors" href="index.html">Home</a></li>
@@ -22,9 +24,9 @@
 		
 			<p id="titlestatement">Space, my final frontier. These are the voyages that I want to have someday.
 			To boldly go where I haven't gone before.</p>
-		<div>
+		
 			<img src="images/earth-from-space.jpg" alt="" width="900" height="310">
-		</div>
+		
 		</header>	
 		
 		<section>
@@ -81,5 +83,6 @@
 		<footer>
 			<p>ITM Enterprise All Rights Reserved. &copy; 2012</p>
 		</footer>
+		</div>
 	</body>
 </html>
