fixed issues with naming

--- a/index.html
+++ b/index.html
@@ -12,77 +12,76 @@
 		<div id="wrapper">	
 			<nav>
 				<ul>
-					<li class="navlist"><a class="navanchors" href="index.html">Home</a></li>
-					<li class="navlist"><a class="navanchors" href="about.html">About</a></li>
-					<li class="navlist"><a class="navanchors" href="contact.html">Contact</a></li>
-					<li class="navlist"><a class="navanchors" href="helpout.html">Help Me Out</a></li>
+					<li><a class="navanchors" href="index.html">Home</a></li>
+					<li><a class="navanchors" href="about.html">About</a></li>
+					<li><a class="navanchors" href="contact.html">Contact</a></li>
+					<li><a class="navanchors" href="helpout.html">Help Me Out</a></li>
 				</ul>
 			</nav>
-		<header>
 			
-			<h1>Space My Final Frontier</h1>
-		
-			<p id="titlestatement">Space, my final frontier. These are the voyages that I want to have someday.
-			To boldly go where I haven't gone before.</p>
-		
-			<img src="images/earth-from-space.jpg" alt="" width="900" height="310">
-		
-		</header>	
-		
-		<section>
-			<h2>How Do I Reach Space?</h2>	
+			<header>
 			
-			<p> "I have always found intrest in the sky. Even as a child I would look up 
-			and wonder what was out there? How can I get there? Well, space is not easily 
-			reached so I found <strong>pictures</strong> and <strong>words</strong> to
-			help me achieve space travel. I didn't ever think it was going to be 
-			achievable to get to outer space, but now I just need to save up for a
-			<a href="http://www.virgingalactic.com/booking/">trip to space</a>. Thanks to
-			Virgin Galactics ambition I am one step closer, but that comes with a price.
-			A very hefty one. I didn't let that get me down though! I just thought if I 
-			could get 200k people to donate a dollar to <em>help out</em> I could float 
-			that kind of bill.</p>
+				<h1>Space My Final Frontier</h1>
 		
-			<p>This site I created is dedicated to helping me raise the funds to achieve 
-			my lifelong dream of checking out what space is like. It has become a social
-			experiment to see if people I dont even know will <em>help out</em> and get 
-			me a ride to outer space. I came up with the idea from living in Minneapolis
-			and watching video's on Youtube. When I lived in Minneapolis people 
-			would ask for spare change to ride the bus or whatever. It usually was outside
-			Chicago Lake Liquor so it wasn't very hard to figure out what your spare 
-			change was going towards. I figured I would take an honest approach if I'm 
-			going to pan-handle my way to space. Also when I was watching viral video's 
-			on Youtube that have had millions of viewers/hits that gave me the idea to 
-			expand this idea to the web. Because I don't really have time to stand on the 
-			corner somewhere and ask people for spare change working fulltime and going
-			to school at <a href="http://www.fullsail.edu">Full Sail</a>.</p>
-		</section>
+				<p id="titlestatement">Space, my final frontier. These are the voyages that I want to have someday.
+				To boldly go where I haven't gone before.</p>
+			<div id="earth"><img src="images/earth-from-space.jpg" alt="Space From Earth" width="900" height="310"></div>
+			</header>	
 		
-		<aside>
-			<h2>Hello Space!</h2>
+			<section>
+				<h2>How Do I Reach Space?</h2>	
 			
-			<p>These are some images I have collected from various sites.</p>
+				<p> "I have always found intrest in the sky. Even as a child I would look up 
+				and wonder what was out there? How can I get there? Well, space is not easily 
+				reached so I found <strong>pictures</strong> and <strong>words</strong> to
+				help me achieve space travel. I didn't ever think it was going to be 
+				achievable to get to outer space, but now I just need to save up for a
+				<a href="http://www.virgingalactic.com/booking/">trip to space</a>. Thanks to
+				Virgin Galactics ambition I am one step closer, but that comes with a price.
+				A very hefty one. I didn't let that get me down though! I just thought if I 
+				could get 200k people to donate a dollar to <em>help out</em> I could float 
+				that kind of bill.</p>
 		
-			<ul>
-				<li><a class="imageanchors" href="images/messier.jpg">Messier</a></li>
-				<li><a class="imageanchors" href="images/doradus.jpg">Doradus</a></li>
-				<li><a class="imageanchors" href="images/abell.jpg">Abell</a></li>
-				<li><a class="imageanchors" href="images/seagull-nebula.jpg">Seagull</a></li>
-			</ul>
-		</aside>
+				<p>This site I created is dedicated to helping me raise the funds to achieve 
+				my lifelong dream of checking out what space is like. It has become a social
+				experiment to see if people I dont even know will <em>help out</em> and get 
+				me a ride to outer space. I came up with the idea from living in Minneapolis
+				and watching video's on Youtube. When I lived in Minneapolis people 
+				would ask for spare change to ride the bus or whatever. It usually was outside
+				Chicago Lake Liquor so it wasn't very hard to figure out what your spare 
+				change was going towards. I figured I would take an honest approach if I'm 
+				going to pan-handle my way to space. Also when I was watching viral video's 
+				on Youtube that have had millions of viewers/hits that gave me the idea to 
+				expand this idea to the web. Because I don't really have time to stand on the 
+				corner somewhere and ask people for spare change working fulltime and going
+				to school at <a href="http://www.fullsail.edu">Full Sail</a>.</p>
+			</section>
 		
-		<article>	
-			<h2>What's that you say?</h2>
+			<aside>
+				<h2>Hello Space!</h2>
+			
+				<p>These are some images I have collected from various sites.</p>
+		
+				<ul>
+					<li><a class="imageanchors" href="images/messier.jpg">Messier</a></li>
+					<li><a class="imageanchors" href="images/doradus.jpg">Doradus</a></li>
+					<li><a class="imageanchors" href="images/abell.jpg">Abell</a></li>
+					<li><a class="imageanchors" href="images/seagull-nebula.jpg">Seagull</a></li>
+				</ul>
+			</aside>
+		
+			<article>	
+				<h2>What's that you say?</h2>
 				
-			<p>This is an article on the web I found interesting.</p>
+				<p>This is an article on the web I found interesting.</p>
 		 
-			<a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a>
+				<a href="http://www.space.com/18202-earth-magnetic-field-reversal.html">Earth's Magnetic Field</a>
 			
-		</article>	
+			</article>	
 		
-		<footer>
-			<p>ITM Enterprise All Rights Reserved. &copy; 2012</p>
-		</footer>
+			<footer>
+				<p>ITM Enterprise All Rights Reserved. &copy; 2012</p>
+			</footer>
 		</div>
 	</body>
 </html>
