button and spacing issues fixed

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 		
 				<p id="titlestatement">Space, my final frontier. These are the voyages that I want to have someday.
 				To boldly go where I haven't gone before.</p>
-			<div id="earth"><img src="images/earth-from-space.jpg" alt="Space From Earth" width="900" height="310">
-			<a class="button" href="#"><span>Donate</span></a> </div>
+				<div id="earth"><img src="images/earth-from-space.jpg" alt="Space From Earth" width="900" height="310"></div>
 			</header>	
 		
 			<section>
@@ -57,7 +56,7 @@
 				corner somewhere and ask people for spare change working fulltime and going
 				to school at <a href="http://www.fullsail.edu">Full Sail</a>.</p>
 			</section>
-		
+			
 			<aside>
 				<h2>Hello Space!</h2>
 			
