--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		
 				<p id="titlestatement">Space, my final frontier. These are the voyages that I want to have someday.
 				To boldly go where I haven't gone before.</p>
-				<div id="earth"><img src="images/earth-from-space.jpg" alt="Space From Earth" width="900" height="310"></div>
+				<div id="earth"><img src="images/earth-from-space.jpg" alt="Space From Earth"></div>
 			</header>	
 		
 			<section>
