--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 		
 		<p id="titlestatement">Space, my final frontier. These are the voyages that I want to have someday.
 		To boldly go where I haven't gone before.</p>
-		<div id="earth"><img src="images/helix-nebula-unraveling.jpg" alt="Helix Nebula" width="900" height="600"></div>
+		<div id="earth"><img src="images/helix-nebula-unraveling.jpg" alt="Helix Nebula"></div>
 		
 		</header>
 		
@@ -41,8 +41,7 @@
 				<td>(320)260-5930</td>
 				<td>imedeck@me.com</td>
 				<td>St. Cloud, MN</td>
-			<tr/>
+			</tr>
 		</table>
-		
 	</body>
 </html>
