added button to form

--- a/helpout.html
+++ b/helpout.html
@@ -125,7 +125,10 @@
 				
 					<label for="check/moneyorder">Check/Moneyorder</label>
 					<input type="checkbox" name="check/moneyorder" id="check/moneyorder"/>
-				</div>		
+				</div>
+				<div>
+					<button type="submit" name="submit"	class="button">Submit</button>
+				</div>
 			</form>
 		</div>
 	</body>
